Opened 16 years ago

Closed 16 years ago

#3786 closed bug (fixed)

Revision 30240 failed to compile because of the preference panel CPUFrequency.

Reported by: maxime.simon Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When compiling the revision 30240 using GCC4, I get errors because of problems in the CPUFrequency.
These are missing 'includes' and 'namespaces'.
I made a patch to resolve this issue.

Attachments (1)

3786.diff (1.9 KB ) - added by maxime.simon 16 years ago.

Download all attachments as: .zip

Change History (2)

by maxime.simon, 16 years ago

Attachment: 3786.diff added

comment:1 by anevilyak, 16 years ago

Resolution: fixed
Status: newclosed

Applied in hrev30241, thanks!

Note: See TracTickets for help on using tickets.