gcc4 build fix by Maxime Simon. Resolves ticket #3786. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30241 a95241bf-73f2-0310-859d-f6bbb57e9c96